# xios

./: .gitignore  CMakeLists.txt  README.md  binding.gyp  build.sh  eslint.config.mjs  main.cpp  napi-demo.js  package-lock.json  package.json  requirements.txt  secure_http_client.js  secure_http_client_napi.cpp  test_server  trunk.yaml  xios.cpp  xios.hpp
.github/workflows/: build-and-test.yml  codacy.yml  sync-with-ieee.yml
.trunk/: actions  logs  notifications  out  tools  trunk.yaml
.trunk/plugins/: trunk
certs/: cert.pem  key.pem
include/: xios.hpp
include/wolfssl/: options.h
src/: xios.cpp  xios.hpp
test/: test.cpp  test_get.cpp  test_get.h  test_main.cpp  test_parseURL.cpp  test_parseURL.h  test_post.cpp
test/catch2/src/: catch_amalgamated.cpp
test/test_rest_api/: app.py  db.py  schema.sql
test/test_server/: cert.pem  key.pem  server  test_server  test_server.cpp
util/: reverse-https-proxy.cpp
util/certs/: key.pem
